Fix margin to prevent a footer view from jumping when connected

--- a/app/components/Connect.css
+++ b/app/components/Connect.css
@@ -57,7 +57,7 @@
 
 .connect__status {
   padding: 0 24px;
-  margin-top: 96px;
+  margin-top: 94px;
   margin-bottom: auto;
 }
 
